log/2022-03-24T14:46:19+08:00.log
[33m[01m[05m[ You are changing the branch: lab1-1-Extra ][0m
Autotest: Begin at Thu Mar 24 14:46:19 CST 2022
[32m[ readelf.c found ][0m
rm -rf *.o
rm readelf
rm: cannot remove 'readelf': No such file or directory
make: *** [Makefile:16: clean] Error 1
gcc -I./ -c main.c
gcc -I./ -c readelf.c
readelf.c: In function 'readelf':
readelf.c:79:55: error: macro "ROUNDDOWN" requires 2 arguments, but only 1 given
   79 |          if (ROUNDDOWN(phdr1->p_offset + phdr1->filesz) == ROUNDDOWN(phdr2->p_offset))
      |                                                       ^
In file included from kerelf.h:29,
                 from readelf.c:7:
types.h:47: note: macro "ROUNDDOWN" defined here
   47 | #define ROUNDDOWN(a, n) (((u_long)(a)) & ~((n)-1))
      | 
readelf.c:79:14: error: 'ROUNDDOWN' undeclared (first use in this function)
   79 |          if (ROUNDDOWN(phdr1->p_offset + phdr1->filesz) == ROUNDDOWN(phdr2->p_offset))
      |              ^~~~~~~~~
readelf.c:79:14: note: each undeclared identifier is reported only once for each function it appears in
readelf.c:79:85: error: macro "ROUNDDOWN" requires 2 arguments, but only 1 given
   79 |          if (ROUNDDOWN(phdr1->p_offset + phdr1->filesz) == ROUNDDOWN(phdr2->p_offset))
      |                                                                                     ^
In file included from kerelf.h:29,
                 from readelf.c:7:
types.h:47: note: macro "ROUNDDOWN" defined here
   47 | #define ROUNDDOWN(a, n) (((u_long)(a)) & ~((n)-1))
      | 
make: *** [Makefile:6: readelf.o] Error 1
[31m[01m[ Cannot find your readelf. Please check your readelf.c. ][0m
[33m[01m[ You got 0 (of 100) this time. Thu Mar 24 14:46:21 CST 2022 ][0m
Autotest: End at Thu Mar 24 14:46:21 CST 2022
